# Linkedin_Scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
linkedin_scraper/: __init__.py  about_scraper.py  authenticator.py  config.py  education_scraper.py  experience_scraper.py  extract_current_companies.py  language_scraper.py  license_certification_scraper.py  main.py  profile_builder.py  profile_scraper.py  project_scraper.py  pyproject.toml  setup.py  skills_scraper.py  utils.py
